--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,29 @@
+ion-content {
+  --ion-background-color:#61ac70
+}
+p {
+  padding: 0 40px;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #60646B;
+  align: center;
 
+  b {
+    color: #000000;
+  }
+}
+
+ion-grid {
+  position: fixed;
+  bottom: 30%;
+
+
+}
+
+h2{
+  font-size: 16px;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 0 40px;
+  width: 100%;
+}
