--- a/src/app/mapa/mapa.page.html
+++ b/src/app/mapa/mapa.page.html
@@ -1,3 +1,4 @@
+
 <ion-header>
   <ion-toolbar>
     <ion-title>Mundo Verde</ion-title>
@@ -6,7 +7,9 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+<div  style="height: 300px" id="map_canvas"></div>
 
 <ion-content padding>
-<div id="map_canvas"></div>
+  <ion-button ion-button (click)="onButtonClick()">Demo</ion-button>
+
 </ion-content>
