--- a/src/app/mapa/mapa.page.scss
+++ b/src/app/mapa/mapa.page.scss
@@ -4,3 +4,12 @@ ion-content {
 ion-toolbar{
   --background:#61ac70
 }
+
+
+
+ion-item{
+  --background:#61ac70
+}
+ion-toggle{
+  --background:white
+}
