--- a/src/app/gente/gente.page.html
+++ b/src/app/gente/gente.page.html
@@ -14,37 +14,37 @@
 
       <ion-item >
                       <ion-avatar slot="start">
-                        <ion-img [src]="'https://firebasestorage.googleapis.com/v0/b/fresh-2637d.appspot.com/o/gente%2Frestoranvegano.jpeg?alt=media&token=e19ead20-8749-48d4-9052-4b7cc5128366'"></ion-img>
+                        <ion-img [src]="'./assets/profile/perfil1.jpeg'"></ion-img>
 
           </ion-avatar>
-       <ion-label>Juan Perez</ion-label>
+       <ion-label>Juan Verde</ion-label>
   <ion-icon name="arrow-dropright"></ion-icon>
 
       </ion-item>
       <ion-item >
                       <ion-avatar slot="start">
-                        <ion-img [src]="'https://firebasestorage.googleapis.com/v0/b/fresh-2637d.appspot.com/o/gente%2Frestoranvegano.jpeg?alt=media&token=e19ead20-8749-48d4-9052-4b7cc5128366'"></ion-img>
+                        <ion-img [src]="'./assets/profile/perfil2.jpeg'"></ion-img>
 
           </ion-avatar>
-       <ion-label>Juan Perez</ion-label>
+       <ion-label>Javier Ecologico</ion-label>
   <ion-icon name="arrow-dropright"></ion-icon>
 
       </ion-item>
       <ion-item >
                       <ion-avatar slot="start">
-                        <ion-img [src]="'https://firebasestorage.googleapis.com/v0/b/fresh-2637d.appspot.com/o/gente%2Frestoranvegano.jpeg?alt=media&token=e19ead20-8749-48d4-9052-4b7cc5128366'"></ion-img>
+                        <ion-img [src]="'./assets/profile/profile6.png'"></ion-img>
 
           </ion-avatar>
-       <ion-label>Juan Perez</ion-label>
+       <ion-label>Antonia Flores</ion-label>
   <ion-icon name="arrow-dropright"></ion-icon>
 
       </ion-item>
       <ion-item >
                       <ion-avatar slot="start">
-                        <ion-img [src]="'https://firebasestorage.googleapis.com/v0/b/fresh-2637d.appspot.com/o/gente%2Frestoranvegano.jpeg?alt=media&token=e19ead20-8749-48d4-9052-4b7cc5128366'"></ion-img>
+                        <ion-img [src]="'./assets/profile/profile4.png'"></ion-img>
 
           </ion-avatar>
-       <ion-label>Juan Perez</ion-label>
+       <ion-label>Pedro Torres</ion-label>
   <ion-icon name="arrow-dropright"></ion-icon>
 
       </ion-item>
