--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -10,7 +10,7 @@
 <ion-content padding>
   <ion-slides>
       <ion-slide>
-        <ion-card>
+        <ion-card (click)=detalleCard()>
           <ion-card-header>
           <ion-card-subtitle>Nuevo Restorant Vegano</ion-card-subtitle>
           <ion-card-title>Veggie</ion-card-title>
