--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -15,21 +15,21 @@
   </p>
   <p text-center>
     Carlos Verde <br>
-   <span style="color:grey"> Actress <br>
-    Film Industry</span>
+   <span style="color:white"> Ecologista <br>
+    Profesional</span>
   </p>
   <ion-row text-center>
     <ion-col>
-        <button ion-button icon-left outline color="cuspurple">
+        <ion-button ion-button icon-left outline color="cuspurple">
             <ion-icon style="margin-top:-4px" name="home"></ion-icon>
-           Tinder Plus
-          </button>
+           Home
+         </ion-button>
     </ion-col>
     <ion-col>
-        <button ion-button icon-left outline color="cuspurple">
+        <ion-button ion-button icon-left outline color="cuspurple">
             <ion-icon style="margin-top:-4px" name="md-cog"></ion-icon>
-           Settings
-          </button>
+           Configuración
+         </ion-button>
     </ion-col>
   </ion-row>
   <ion-row>
@@ -55,10 +55,5 @@
         </p>
     </ion-col>
   </ion-row>
-  <h4 text-center>Share with Friends</h4>
-  <h5 text-center>Find match</h5>
-  <p text-center>
-  <button ion-button full (click)="presentModal()" style="border-radius:40px; background: linear-gradient(to right, #3A1C71 , #D76D77, #FFAF7B);
-  ">Share</button>
-  </p>
+
 </ion-content>
