--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -10,7 +10,7 @@
 <ion-content padding>
   <ion-slides>
       <ion-slide>
-        <ion-card (click)=detalleCard()>
+        <ion-card (click)=detalleCard(1)>
           <ion-card-header>
           <ion-card-subtitle>Nuevo Restorant Vegano</ion-card-subtitle>
           <ion-card-title>Veggie</ion-card-title>
@@ -35,7 +35,7 @@
           </ion-card>
       </ion-slide>
       <ion-slide>
-        <ion-card>
+        <ion-card (click)=detalleCard(2)>
           <ion-card-header>
           <ion-card-subtitle>Nuevo Puesto de Reciclaje en San Miguel</ion-card-subtitle>
           <ion-card-title>Gente Verde</ion-card-title>
